# FaderPort-2

./: .gitignore  CMakeLists.txt  README.md
src/: fp2.cpp  fp2.h  main.cpp
